testdata/baselines/reference/submodule/conformance/jsDeclarationsClassImplementsGenericsSerialization.errors.txt
lib.js(1,1): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== interface.ts (0 errors) ====
    export interface Encoder<T> {
        encode(value: T): Uint8Array
    }
==== lib.js (1 errors) ====
    /**
    ~~~
     * @template T
    ~~~~~~~~~~~~~~
     * @implements {IEncoder<T>}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     */
    ~~~
    export class Encoder {
    ~~~~~~~~~~~~~~~~~~~~~~
        /**
    ~~~~~~~
         * @param {T} value 
    ~~~~~~~~~~~~~~~~~~~~~~~~
         */
    ~~~~~~~
        encode(value) {
    ~~~~~~~~~~~~~~~~~~~
            return new Uint8Array(0)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    
    
    /**
     * @template T
     * @typedef {import('./interface').Encoder<T>} IEncoder
     */